--- a/less/thumbnails-full-screen.less
+++ b/less/thumbnails-full-screen.less
@@ -7,14 +7,14 @@
     bottom: 0;
     display: block;
     
-    &.thumb-on-full-screen-horizontal img {
-        max-width: 100%;
-        max-height: none;        
+    img.thumb-on-full-screen-horizontal {
+        max-height: 100%;
+        max-width: none;
     }
     
-    &.thumb-on-full-screen-vertical img {
-        max-width: none;
-        max-height: 100%;
+    img.thumb-on-full-screen-vertical {
+        max-height: none;
+        max-width: 100%;
     }
 
     .jgallery-container {
