--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -14,14 +14,14 @@
         display: none;
     }
     
-    &.thumb-horizontal img {
-        max-width: 100%;
-        max-height: none;        
+    img.thumb-horizontal {
+        max-height: 100%;
+        max-width: none;
     }
     
-    &.thumb-vertical img {
-        max-width: none;
-        max-height: 100%;
+    img.thumb-vertical {
+        max-height: none;
+        max-width: 100%;
     }
     
     .jgallery-container {
